# tensorflow_from_scratch

./: .gitignore  README.md  pyproject.toml  tensorflow_from_scratch_01.ipynb  tensorflow_from_scratch_02.ipynb  tensorflow_from_scratch_03.ipynb  tensorflow_from_scratch_04.ipynb
tmp/: .gitignore
