[tool.poetry]
name = "tensorflow-from-scratch"
version = "0.1.0"
description = ""
authors = ["mikeshinoda <53910940+desonglll@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tensorflow = "^2.17.0"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
pillow = "^10.4.0"
keras-preprocessing = "^1.1.2"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
